In Progress - Government 360 - Building Permit

--- a/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox2.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox2.html
@@ -1,35 +1,44 @@
 <div style="display: flex; flex: 100%; margin-left: 15px; margin-right: 15px;">
     <div class="box box-default">
         <div class="box-header with-border">
-          <h3 class="box-title">Box 1 (For Receiving & Recording Section)</h3>
+          <h3 class="box-title">Box 2 (For Receiving & Recording Section)</h3>
         </div>
         <div class="box-body">
             <label style="font-size: 15px;">Building Documents (Five Sets Each)</label>
             <div style="display: flex; flex-direction: column;">
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Site Development and Location
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withSiteDevelopmentPlan"> Site Development and Location
                 </div>
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Architectural Plans & Specifications
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withArchitecturalPlanAndSpecs"> Architectural Plans & Specifications
                 </div>
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Structural Designs & Specifications
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withStructuralDesignAndSpecs"> Structural Designs & Specifications
                 </div>
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Sanitary / Plumbing Plans & Specifications
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withSanitaryPlanAndSpecs"> Sanitary / Plumbing Plans & Specifications
                 </div>
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Electrical Plans & Specifications
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withElectricalPlanAndSpecs"> Electrical Plans & Specifications
                 </div>
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Mechanical Plans & Specifications
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withMechanicalPlanAndSpecs"> Mechanical Plans & Specifications
                 </div>
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Logbook (1 copy)
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withLogBook"> Logbook (1 copy)
                 </div>
                 <div style="display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
-                    <input type="text" style="margin: 5px; margin-top: 0px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                    <input type="checkbox" style="margin: 5px;" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="withOtherDocumentRemarks"> Others&nbsp;(Specify)
+                    <input type="text" style="margin: 5px; margin-top: 0px;" class="form-control editRealEstateBuildingPermit" 
+                    module="RealEstateBuildingPermitUI" name="withOtherDocumentRemarks">
                 </div>
             </div>
         </div>
