--- a/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox3.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox3.html
@@ -61,46 +61,63 @@
                     <label style="flex: 30%; margin: 5px;">Total Estimated Cost</label>
                     <label style="flex: 30%; margin: 5px;">Cost of Estimates Installed</label>
                     <label style="flex: 30%; margin: 5px;">Building</label>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="buildingEstimatedCost" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="buildingEstimateInstalledCost" style="flex: 30%; margin: 5px;"/>
                     <label style="flex: 30%; margin: 5px;">Electrical</label>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="electricalEstimatedCost" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="electricalEstimatedInstalledCost" style="flex: 30%; margin: 5px;"/>
                     <label style="flex: 30%; margin: 5px;">Mechanical</label>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="mechanicalEstimatedCost" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="mechanicalEstimatedInstalledCost" style="flex: 30%; margin: 5px;"/>
                     <label style="flex: 30%; margin: 5px;">Plumbing</label>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="plumbingEstimatedCost" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="plumbingEstimatedInstalledCost" style="flex: 30%; margin: 5px;"/>
                     <label style="flex: 30%; margin: 5px;">Others</label>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="othersEstimatedCost" style="flex: 30%; margin: 5px;"/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="othersEstimatedInstalledCost" style="flex: 30%; margin: 5px;"/>
                     <label style="flex: 30%; margin: 5px;">Total Construction Cost</label>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;" disabled=""/>
-                    <input class="form-control editRealEstateBuildingPermit" style="flex: 30%; margin: 5px;" disabled=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="totalEstimatedCost" style="flex: 30%; margin: 5px;" disabled=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="totalEstimatedInstalledCost" style="flex: 30%; margin: 5px;" disabled=""/>
                 </div>
                 <div style="flex: 1; display: flex; flex-wrap: wrap; margin-left: 30px;">
                     <br/>
                     <br/>
                     <div class="form-group" style="flex: 40%; margin-left: 15px;">
                         <label>Number of Storeys</label>
-                        <input class="form-control editRealEstateBuildingPermit" style="margin: 5px;"/>
+                        <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                        name="storeyCount" style="margin: 5px;"/>
                     </div>
                     <div class="form-group" style="flex: 40%; margin-left: 15px;">
                         <label>Total Floor Area</label>
-                        <input class="form-control editRealEstateBuildingPermit" style="margin: 5px;"/>
+                        <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                        name="totalFloorArea" style="margin: 5px;"/>
                     </div>
                     <div class="form-group" style="flex: 40%; margin-left: 15px;">
                         <label>Proposed Date of Construction</label>
-                        <input class="form-control editRealEstateBuildingPermit" style="margin: 5px;"/>
+                        <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                        name="proposedConstructionDate" style="margin: 5px;"/>
                     </div>
                     <div class="form-group" style="flex: 40%; margin-left: 15px;">
                         <label>Expected Date of Completion</label>
-                        <input class="form-control editRealEstateBuildingPermit" style="margin: 5px;"/>
+                        <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                        name="expectedCompletionDate" style="margin: 5px;"/>
                     </div>
                     <div class="form-group" style="flex: 40%; margin-left: 15px;">
                         <label>Construction Materials (Wooden, Concrete, Steel, Mixed)</label>
-                        <input class="form-control editRealEstateBuildingPermit" style="margin: 5px;"/>
+                        <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                        name="constructionMaterials" style="margin: 5px;"/>
                     </div>
                 </div>
             </div>
