--- a/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox4.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox4.html
@@ -13,110 +13,144 @@
                 <label class="text-center" style="flex: 18%; margin: 2px;">O.R. Number</label>
                 <label class="text-center" style="flex: 18%; margin: 2px;">Date Paid</label>
 
-                <label style="flex: 18%; margin: 2px;"><input type="checkbox" style="margin: 5px;"> Land Use/Zoning</label>
+                <label style="flex: 18%; margin: 2px;"><input type="checkbox" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="landZoningAmountDue" style="margin: 5px;"> Land Use/Zoning</label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="landZoningAmountDue"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="landZoningAssessedBy"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="landZoningInvoiceNumber"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-
-                <label style="flex: 18%; margin: 2px;"><input type="checkbox" style="margin: 5px;"> Line and Grade</label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="landZoningPaymentDate"/>
                 </label>
 
-                <label style="flex: 18%; margin: 2px;"><input type="checkbox" style="margin: 5px;"> Building</label>
+                <label style="flex: 18%; margin: 2px;"><input type="checkbox" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="landZoningAmountDue" style="margin: 5px;"> Line and Grade</label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="lineAndGradeAmountDue"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="lineAndGradeAssessedBy"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="lineAndGradeInvoiceNumber"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-
-                <label style="flex: 18%; margin: 2px;"><input type="checkbox" style="margin: 5px;"> Plumbing</label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
-                </label>
-                <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="lineAndGradePaymentDate"/>
                 </label>
 
-                <label style="flex: 18%; margin: 2px;"><input type="checkbox" style="margin: 5px;"> Electrical</label>
+                <label style="flex: 18%; margin: 2px;"><input type="checkbox" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="buildingAmountDue" style="margin: 5px;"> Building</label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="buildingAmountDue"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="buildingAssessedBy"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="buildingInvoiceNumber"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="buildingPaymentDate"/>
                 </label>
 
-                <label style="flex: 18%; margin: 2px;"><input type="checkbox" style="margin: 5px;"> Mechanical</label>
+                <label style="flex: 18%; margin: 2px;"><input type="checkbox" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="plumbingAmountDue" style="margin: 5px;"> Plumbing</label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="plumbingAmountDue"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="plumbingAssessedBy"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="plumbingInvoiceNumber"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="plumbingPaymentDate"/>
+                </label>
+
+                <label style="flex: 18%; margin: 2px;"><input type="checkbox" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="electricalAmountDue" style="margin: 5px;"> Electrical</label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="electricalAmountDue"/>
+                </label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="electricalAssessedBy"/>
+                </label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="electricalInvoiceNumber"/>
+                </label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="electricalPaymentDate"/>
+                </label>
+
+                <label style="flex: 18%; margin: 2px;"><input type="checkbox" class="editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="mechanicalAmountDue" style="margin: 5px;"> Mechanical</label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="mechanicalAmountDue"/>
+                </label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="mechanicalAssessedBy"/>
+                </label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="mechanicalInvoiceNumber"/>
+                </label>
+                <label style="flex: 18%; margin: 2px;">
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="mechanicalPaymentDate"/>
                 </label>
 
                 <label style="flex: 18%; margin: 2px;">Others</label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="otherAmountDue"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="otherAssessedBy"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="otherInvoiceNumber"/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="otherPaymentDate"/>
                 </label>
 
                 <label style="flex: 18%; margin: 2px;">Total</label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name="" disabled=""/>
+                    <input class="form-control editRealEstateBuildingPermit" rowIndex="0" module="RealEstateBuildingPermitUI"
+                    name="totalAmount" disabled=""/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
-                    <input class="form-control editRealEstateBuildingPermit" name="" disabled=""/>
                 </label>
                 <label style="flex: 18%; margin: 2px;">
                 </label>
