--- a/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox6.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox6.html
@@ -13,27 +13,27 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerName" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerAddress" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PRC #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerLicense" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PTR #</label>
-                        <input class="form-control editRealEstateBuildingPermit"name=""/>
+                        <input name="architectOrCivilEngineerTIN" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit"name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerDateIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerPlaceIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                 </div>
             </div>
@@ -44,19 +44,19 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="applicantName" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>CTC #</label>
-                        <input class="form-control editRealEstateBuildingPermit"name=""/>
+                        <input name="applicantCTC" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="applicantCTCDateIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="applicantCTCPlaceIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                 </div>
             </div>
@@ -69,27 +69,27 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerInChargeName" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerInChargeAddress" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PRC #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerInChargeLicense" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PTR #</label>
-                        <input class="form-control editRealEstateBuildingPermit"name=""/>
+                        <input name="architectOrCivilEngineerInChargeTIN" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerInChargeDateIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="architectOrCivilEngineerInChargePlaceIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                 </div>
             </div>
@@ -101,31 +101,31 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 45%; margin: 5px;">
                         <label>TCT/CTC #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="lotOwnerTCT" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 45%; margin: 5px;">
                         <label>Tax Declaration #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="lotOwnerTaxDeclaration" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="lotOwnerName" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="lotOwnerAddress" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>CTC #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="lotOwnerCTC" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="lotOwnerCTCCTCDateIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input name="lotOwnerCTCPlaceIssued" rowIndex="0" module="RealEstateBuildingPermitUI" class="form-control editRealEstateBuildingPermit" name=""/>
                     </div>
                 </div>
             </div>
