--- a/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileMain.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileMain.html
@@ -1,29 +1,40 @@
 <div style="display: flex; flex: 100%;">
+    <input rowIndex="0" type="hidden" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="RealEstateBuildingPermitId">
+    <input rowIndex="0" type="hidden" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="code">
+    <div class="form-group" style="flex: 2; margin-left: 10px;">
+        <label class="control-label">Real&nbsp;Estate</label>
+        <div class="input-group">
+            <input rowIndex="0" type="text" style="width: 200px;" class="form-control autocomplete displayEdit" name="realEstateCode" placeholder="Real Estate" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoname="realEstateCode" helptitle="realEstateCode">
+            <input rowIndex="0" class="form-control editRealEstateBuildingPermit HiddenAutoComplete" name="realEstateCode" type="hidden" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoNameField="realEstateCode" value="">
+            <div class="autocomplete-items" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoname="realEstateCode">
+            </div>
+        </div>
+    </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
-        <label>Permit Type</label>
+        <label>Permit&nbsp;Type</label>
         <select class="form-control" rowIndex="0" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-        name="permitType" tabName="_TABNAME_">
+        name="permitType" tabName="_TABNAME_"> 
           <option value="New">New</option>
-          <option value="New">Renewal</option>
+          <option value="Renewal">Renewal</option>
         </select>
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
-        <label>Permit Code</label>
+        <label>Permit&nbsp;Code</label>
         <input type="text" rowIndex="0" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
             name="permitCode" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
-        <label>Application No.</label>
+        <label>Appl.&nbsp;No.</label>
         <input type="text" rowIndex="0" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
             name="applicationNumber" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px; margin-right: 15px;">
-        <label>Application Date</label>
+        <label>Appl.&nbsp;Date</label>
         <input type="text" rowIndex="0" class="form-control calendar editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
             name="applicationDate" disabled="" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px; margin-right: 15px;">
-        <label>Issued Date</label>
+        <label>Issued&nbsp;Date</label>
         <input type="text" rowIndex="0" class="form-control calendar editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
             name="issueDate" disabled="" tabName="_TABNAME_">
     </div>
